fix(styles): fix for high-contrast under windowsi [ci visual] (#4104)

--- a/src/styles/mixins/_mixins.scss
+++ b/src/styles/mixins/_mixins.scss
@@ -8,6 +8,7 @@
   font-family: var(--sapFontFamily);
   font-weight: normal;
   box-sizing: border-box;
+  forced-color-adjust: none;
   padding: 0;
   margin: 0;
   border: 0;
